tests/error/modifier_errors/type_check_in_block.err
Error: Operator not defined (at $FILE:8:8)
  | 
6 | def test() -> None:
7 |     with dagger:
8 |         1 + True
  |         ^^^^^^^^ Binary operator `+` not defined for `int` and `bool`

Guppy compilation failed due to 1 previous error
